rename to getDomain, create a draft to RealVectorParam, and mostly done Scalar #4 #14